eks/deployment.yaml
# Example file:

apiVersion: apps/v1
kind: Deployment
metadata:
  name: gobank-api-deployment
  labels:
    app: gobank-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: gobank-api 
  template:
    metadata:
      labels:
        app: gobank-api
    spec:
      containers:
      - name: gobank-api
        image: 760486049168.dkr.ecr.eu-west-1.amazonaws.com/gobank:latest
        ports:
        - containerPort: 8080
